<resources>
    <string name="app_name">BarfAndBel.ch</string>
    <string name="title_home_navbar">Home</string>
    <string name="title_all_quotes_navbar">All Quotes</string>
    <string name="title_extras_navbar">Extras</string>

    <string name="quote_text_home">\"%1$s\"</string>
    <string name="quote_source_home">in %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quote_image">Quote Image</string>
    <string name="quote_popup_character">Character</string>
    <string name="quote_character_source">Source</string>
    <string name="quote_popup_episode">Episode</string>
    <string name="quote_popup_submitor">Submitted by</string>
    <string name="quote_popup_no_episode">None</string>
    <string name="quote_background_content_description">Quote Background</string>
    <string name="quote_detail_background_contentdescription">Quote Background</string>
    <string name="storage_permission_denied">Storage permission denied. Unable to change background.</string>
    <string name="scheduled_notification_description">Scheduled quote notifications set by the user in the app</string>
    <string name="scheduled_notification_title">Quote by %1$s</string>
    <string name="scheduled_notification_unfold">Unfold to view quote</string>
    <string-array name="notification_frequency_options">
        <item>Hourly</item>
        <item>Daily</item>
    </string-array>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
