<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:cardCornerRadius="10dp" app:cardBackgroundColor="#FFFFFF"
        >
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="200dp"
                            android:id="@+id/quotePopupImage" android:scaleType="centerCrop"
                            app:srcCompat="@drawable/thisisberk" android:contentDescription="@string/quote_image"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/quotePopupText"
                            android:layout_gravity="bottom" android:fontFamily="@font/tillanabold"
                            android:textSize="18sp"
                            android:textColor="@android:color/white" android:layout_margin="5dp"
                            tools:text="&quot;This is Berk. It's a two days north of Hopeless and a few degrees south of Freezing to Death.&quot;"/>
                </FrameLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:paddingTop="5dp" android:paddingBottom="5dp"
                        android:paddingLeft="15dp" android:paddingRight="15dp">
                    <TextView
                            android:text="@string/quote_popup_character"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="16sp"
                            android:fontFamily="@font/tillanabold"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/quotePopupCharacter"
                            android:textAlignment="textEnd" tools:text="Hiccup Horrendous Haddock III"
                            android:fontFamily="@font/tillanaregular" android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:paddingTop="5dp" android:paddingBottom="5dp"
                        android:paddingLeft="15dp" android:paddingRight="15dp">
                    <TextView
                            android:text="@string/quote_character_source"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="16sp"
                            android:fontFamily="@font/tillanabold"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/quotePopupSource"
                            android:textAlignment="textEnd" tools:text="How To Train Your Dragon"
                            android:fontFamily="@font/tillanaregular" android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:paddingTop="5dp" android:paddingBottom="5dp"
                        android:paddingLeft="15dp" android:paddingRight="15dp">
                    <TextView
                            android:text="@string/quote_popup_episode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="16sp"
                            android:fontFamily="@font/tillanabold"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/quotePopupEpisode"
                            android:textAlignment="textEnd" tools:text="None"
                            android:fontFamily="@font/tillanaregular" android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:paddingTop="5dp" android:paddingBottom="5dp"
                        android:paddingLeft="15dp" android:paddingRight="15dp">
                    <TextView
                            android:text="@string/quote_popup_submitor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:textSize="16sp"
                            android:fontFamily="@font/tillanabold"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/quotePopupSubmitor"
                            android:textAlignment="textEnd" tools:text="Iantje"
                            android:fontFamily="@font/tillanaregular" android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>