<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/quoteTabletDetailQuoteLayout"
            android:visibility="visible">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:srcCompat="@drawable/thisisberk"
                android:id="@+id/quoteTabletDetailImage" android:scaleType="centerCrop"
                android:contentDescription="@string/quote_detail_background_contentdescription"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="bottom|center_horizontal"
                android:visibility="visible" android:paddingBottom="?actionBarSize" android:paddingLeft="8dp"
                android:paddingRight="8dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/quoteTabletDetailText"
                    tools:text="&quot;This is Berk. It's twelve days north of Hopeless, and a few degrees south of Freezing to Death.&quot;"
                    android:fontFamily="@font/tillanabold" android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:cardBackgroundColor="#80000000" app:contentPadding="15dp"
                    app:cardCornerRadius="15dp">
                <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:gravity="center_horizontal">

                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                        <TextView
                                android:text="@string/quote_popup_character"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:textColor="@android:color/white"
                                android:fontFamily="@font/tillanasemibold" android:textAlignment="textEnd"
                                android:layout_marginEnd="8dp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/quoteTabletDetailCharacter"
                                tools:text="Hiccup Horrendous Haddock III" android:fontFamily="@font/tillanaregular"
                                android:textColor="@android:color/white"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                        <TextView
                                android:text="@string/quote_character_source"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:textColor="@android:color/white"
                                android:fontFamily="@font/tillanasemibold" android:textAlignment="textEnd"
                                android:layout_marginEnd="8dp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/quoteTabletDetailSource"
                                tools:text="How To Train Your Dragon" android:fontFamily="@font/tillanaregular"
                                android:textColor="@android:color/white"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                        <TextView
                                android:text="@string/quote_popup_episode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:textColor="@android:color/white"
                                android:fontFamily="@font/tillanasemibold" android:textAlignment="textEnd"
                                android:layout_marginEnd="8dp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/quoteTabletDetailEpisode"
                                tools:text="No episode" android:fontFamily="@font/tillanaregular"
                                android:textColor="@android:color/white"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                        <TextView
                                android:text="@string/quote_popup_submitor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:textColor="@android:color/white"
                                android:fontFamily="@font/tillanasemibold" android:textAlignment="textEnd"
                                android:layout_marginEnd="8dp"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/quoteTabletDetailSubmitor"
                                tools:text="Iantje" android:fontFamily="@font/tillanaregular"
                                android:textColor="@android:color/white"/>
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/quoteTabletDetailLoadingLayout"
            android:visibility="visible">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/thisisberk" android:tint="@color/backgroundImageTint"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="bottom|center_horizontal"
                android:paddingBottom="?actionBarSize">
            <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:indeterminateTint="@color/progressBarTint"/>
            <TextView
                    android:text="Loading the quote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textAlignment="center" android:textSize="20sp"
                    android:fontFamily="@font/tillanamedium" android:textColor="@android:color/white"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/quoteTabletDetailReadyLayout">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/thisisberk" android:tint="@color/backgroundImageTint"
        />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textAlignment="center"
                    android:text="Select a quote to view" android:textColor="@android:color/white"
                    android:fontFamily="@font/tillanamedium" android:textSize="24sp"/>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>